--- a/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/PayColorlessPopup.mxml
+++ b/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/PayColorlessPopup.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="500" height="400">
-	<mx:Script source="PayColorlessContainerAs.as" />
+<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="500" height="400"
+	title="{this.resourceManager.getString('main','payColorlessPopup.label')}">
+	<mx:Script source="PayColorlessPopupAs.as" />
 	<mx:Canvas id="requiredPayContainer" height="30" width="100%"
 		verticalScrollPolicy="off" horizontalScrollPolicy="off"
 		click="requiredClickHandler(event)">
