--- a/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/PayColorlessPopup.mxml
+++ b/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/PayColorlessPopup.mxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="500" height="400"
+<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="500" height="260"
 	title="{this.resourceManager.getString('main','payColorlessPopup.label')}">
 	<mx:Script source="PayColorlessPopupAs.as" />
 	<mx:Canvas id="requiredPayContainer" height="30" width="100%"
 		verticalScrollPolicy="off" horizontalScrollPolicy="off"
 		click="requiredClickHandler(event)">
 	</mx:Canvas>
-	<mx:Canvas id="playerMagicContainer" height="180" y="220" width="100%"
+	<mx:Canvas id="playerMagicContainer" height="180" width="100%"
 		verticalScrollPolicy="off" horizontalScrollPolicy="off"
 		click="playerClickHandler(event)">
 	</mx:Canvas>
