--- a/trunk/MagicOfGathering/src/noorg/magic/controls/common/CommonButton.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/common/CommonButton.mxml
@@ -6,6 +6,8 @@
 	<mx:Script source="CommonButtonAs.as" />
 	<mx:Script>
 		<![CDATA[
+			import mx.controls.Button;
+			import mx.core.IButton;
 			public function set text(value:String):void
 			{
 				_text = value;
