--- a/trunk/MagicOfGathering/src/noorg/magic/services/HTTPServices.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/services/HTTPServices.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HTTPServiceLocator xmlns="org.hamster.networks.service.*" xmlns:mx="http://www.adobe.com/2006/mxml">
+<HTTPServiceLocator xmlns="org.hamster.services.*" xmlns:mx="http://www.adobe.com/2006/mxml">
 	<mx:Script source="HTTPServicesAs.as" />
 	<mx:HTTPService id="getCardFromWeb" url="http://www.cardkingdom.com/card_viewer.php" resultFormat="text" />
 </HTTPServiceLocator>
