--- a/trunk/MagicOfGathering/src/HamsterMagicTheGathering.mxml
+++ b/trunk/MagicOfGathering/src/HamsterMagicTheGathering.mxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
 	applicationComplete="appCompleteHandler()" width="1000" height="700"
-	backgroundColor="black">
+	backgroundColor="black" xmlns:popup="noorg.magic.controls.common.buttons.popup.*">
 	<mx:Script source="HamsterMagicTheGatheringAs.as" />
 	<mx:Metadata>
 		[ResourceBundle("main")]
 		[ResourceBundle("action")]
+		[ResourceBundle("component")]
 	</mx:Metadata>
+	<mx:Style source="/noorg/magic/css/Component.css" />
 </mx:WindowedApplication>
