--- a/MagicOfGathering/src/noorg/magic/controls/views/CardConfigurationView.mxml
+++ b/MagicOfGathering/src/noorg/magic/controls/views/CardConfigurationView.mxml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <BaseView xmlns="noorg.magic.controls.views.base.*" creationComplete="completeHandler()"
-	xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" 
-	xmlns:containers="noorg.magic.controls.containers.*">
+	xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="0xFFFFFF"
+	xmlns:containers="noorg.magic.controls.containers.*" xmlns:views="noorg.magic.controls.views.*">
 	<mx:Script source="CardConfigurationViewAs.as" />
-	<mx:HDividedBox x="0" y="0" width="{this.width}" height="{this.height}" paddingTop="3" paddingLeft="3" paddingRight="3" paddingBottom="3">
-		<mx:VBox height="100%" width="280">
-			<mx:ComboBox id="collectionComboBox" dataProvider="{DS.cardCollections}" change="collectionChanged()"/>
-			<mx:TileList width="100%" height="100%" itemRenderer="noorg.magic.controls.renderer.CardRenderer"
-				 dataProvider="{_curColl}"  columnWidth="120" rowHeight="160" itemClick="cardClickHandler(event)"
-				 itemDoubleClick="cardDoubleClickHandler(event)" />
-		</mx:VBox>
-		<mx:VBox>
-			<containers:CardDetailContainer id="detailPopup" width="100%" />
-			<containers:CardListContainer id="cardListContainer" width="100%" />
-		</mx:VBox>
-	</mx:HDividedBox>
+	<mx:ViewStack width="100%" height="100%">
+		<views:LoadCardView id="loadCardView" />
+		<views:BuildCardView id="buildCardView" />
+	</mx:ViewStack>
 </BaseView>
