--- a/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/GameUnit.mxml
+++ b/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/GameUnit.mxml
@@ -14,19 +14,20 @@
 		<mx:FormItem label="{resourceManager.getString('main','path')}"
 			direction="horizontal" width="100%">
 			<base:BaseTextInput id="pathInput" height="20" width="100%"/>
-			<buttons:FolderButton id="pathFolderButton" width="20" height="20" />
+			<buttons:FolderButton id="pathFolderButton" width="20" height="20"
+				click="browsePathFolderHandler()" />
 		</mx:FormItem>
 		<mx:FormItem label="{resourceManager.getString('main','savePath')}"
 			direction="horizontal" width="100%" required="true">
 			<base:BaseTextInput id="savePathInput" height="20" width="100%"/>
-			<buttons:FolderButton id="savePathFolderButton" width="20" height="20" />
+			<buttons:FolderButton id="savePathFolderButton" width="20" height="20"
+				click="browseSavePathFolderHandler()" />
 		</mx:FormItem>
 		<mx:FormItem label="{resourceManager.getString('main','filters')}"
 			direction="horizontal" width="100%">
 			<buttons:AddButton id="addFilterButton" width="20" height="20" 
 				 click="addFilterClickHandler()"/>
-			<mx:HBox id="filterContainer" width="100%" height="20">
-			</mx:HBox>
+			<mx:HBox id="filterContainer" width="100%" height="20" />
 		</mx:FormItem>
 	</mx:Form>
 	<mx:HBox width="100%" horizontalAlign="right" y="100" right="15">
