--- a/trunk/HsGameSaver/src/HsGameSaver.mxml
+++ b/trunk/HsGameSaver/src/HsGameSaver.mxml
@@ -10,5 +10,5 @@
 	<mx:Style source="/org/hamster/gamesaver/css/Main.css" />
 	<mx:Script source="HsGameSaverAs.as" />
 	<views:PathConfView id="pathConfView" width="100%" height="100%" />
-	<containers:GameContainer visible="false" />
+	<containers:GameContainer id="gameContainer" />
 </mx:WindowedApplication>
