--- a/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/GameUnit.mxml
+++ b/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/GameUnit.mxml
@@ -10,29 +10,32 @@
 		x="10" y="10">
 		<mx:FormItem label="{resourceManager.getString('main','name')}" 
 			width="100%" required="true">
-			<base:BaseTextInput id="titleInput" fontWeight="bold" height="20" width="100%" />
+			<base:BaseTextInput id="titleInput" editable="{this.editable}" fontWeight="bold" height="20" width="100%" />
 		</mx:FormItem>
 		<mx:FormItem label="{resourceManager.getString('main','path')}"
 			direction="horizontal" width="100%">
-			<base:BaseTextInput id="pathInput" height="20" width="100%"/>
+			<base:BaseTextInput id="pathInput" height="20" editable="{this.editable}" width="100%"/>
 			<buttons:FolderButton id="pathFolderButton" width="20" height="20"
-				click="browsePathFolderHandler()" />
+				click="browsePathFolderHandler()" enabled="{this.editable}" />
 		</mx:FormItem>
 		<mx:FormItem label="{resourceManager.getString('main','savePath')}"
 			direction="horizontal" width="100%" required="true">
-			<base:BaseTextInput id="savePathInput" height="20" width="100%"/>
+			<base:BaseTextInput id="savePathInput" height="20"  editable="{this.editable}" width="100%"/>
 			<buttons:FolderButton id="savePathFolderButton" width="20" height="20"
-				click="browseSavePathFolderHandler()" />
+				click="browseSavePathFolderHandler()" enabled="{editable}" />
 		</mx:FormItem>
 		<mx:FormItem label="{resourceManager.getString('main','filters')}"
 			direction="horizontal" width="100%">
 			<buttons:AddButton id="addFilterButton" width="20" height="20" 
-				 click="addFilterClickHandler()"/>
+				 click="addFilterClickHandler()" enabled="{editable}"/>
 			<mx:HBox id="filterContainer" width="100%" height="20" />
 		</mx:FormItem>
 	</mx:Form>
 	<mx:HBox width="100%" horizontalAlign="right" y="100" right="15">
-		<buttons:OkayButton width="30" height="30" />
+		<buttons:EditButton width="30" height="30" visible="{!this.editable}" 
+			click="editButtonClickHandler()" />
+		<buttons:OkayButton width="30" height="30" visible="{this.editable}"
+			click="okButtonClickHandler()" />
 		<buttons:DeleteButton width="30" height="30" 
 			click="deleteClickHandler()"/>
 	</mx:HBox>
