--- a/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/FilterUnit.mxml
+++ b/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/FilterUnit.mxml
@@ -7,7 +7,7 @@
 	<mx:Script source="FilterUnitAs.as" />
 	<base:BaseTextInput id="filterTextInput" height="20" 
 		change="inputChangeHandler()" width="40"
-		applyChange="applyChangeHandler(event)"
+		applyChange="applyChangeHandler(event)" editable="{this.editable}"
 		focusIn="inputFocusInHandler()" focusOut="inputFocusOutHandler()"/>
 	<buttons:DeleteButton width="18" height="18" click="deleteBtnClickHandler()"
 		visible="{this.editable}" />
